test/org/midica/testfiles/failing/include-soundfont-inside-function.midica
INCLUDE inc/instruments.midica

0 c /4

FUNCTION test
	SOUNDFONT ../working/java-emergency-soundfont.sf2
END
